--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,15 @@
     <groupId>com.bali.events</groupId>
     <artifactId>bali-events</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>telegram-bot</module>
+        <module>data-scrapper</module>
+    </modules>
 
     <properties>
         <java.version>21</java.version>
-        <jsoup.version>1.17.2</jsoup.version>
-        <selenium-java.version>4.17.0</selenium-java.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
     </properties>
 
@@ -45,16 +49,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jsoup</groupId>
-            <artifactId>jsoup</artifactId>
-            <version>${jsoup.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-java</artifactId>
-            <version>${selenium-java.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mapstruct</groupId>
