--- a/data-scrapper/pom.xml
+++ b/data-scrapper/pom.xml
@@ -15,6 +15,7 @@
     <properties>
         <jsoup.version>1.17.2</jsoup.version>
         <selenium-java.version>4.17.0</selenium-java.version>
+        <spring-context.version>6.1.3</spring-context.version>
     </properties>
 
     <dependencies>
@@ -28,6 +29,7 @@
             <artifactId>selenium-java</artifactId>
             <version>${selenium-java.version}</version>
         </dependency>
+
     </dependencies>
 
 </project>
