--- a/telegram-bot/pom.xml
+++ b/telegram-bot/pom.xml
@@ -9,6 +9,18 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
+    <properties>
+        <telegrambots.version>6.9.7.0</telegrambots.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots</artifactId>
+            <version>${telegrambots.version}</version>
+        </dependency>
+    </dependencies>
+
     <groupId>com.example</groupId>
     <artifactId>telegram-bot</artifactId>
     <version>0.0.1-SNAPSHOT</version>
