--- a/data-scrapper/pom.xml
+++ b/data-scrapper/pom.xml
@@ -12,18 +12,13 @@
     <artifactId>data-scrapper</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
+    <packaging>jar</packaging>
+
     <properties>
-        <jsoup.version>1.17.2</jsoup.version>
         <selenium-java.version>4.17.0</selenium-java.version>
-        <spring-context.version>6.1.3</spring-context.version>
     </properties>
 
     <dependencies>
-<!--        <dependency>-->
-<!--            <groupId>org.jsoup</groupId>-->
-<!--            <artifactId>jsoup</artifactId>-->
-<!--            <version>${jsoup.version}</version>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
