--- a/telegram-bot/pom.xml
+++ b/telegram-bot/pom.xml
@@ -15,6 +15,7 @@
 
     <properties>
         <telegrambots.version>6.9.7.0</telegrambots.version>
+        <jaxb-api.version>2.3.1</jaxb-api.version>
     </properties>
 
     <packaging>jar</packaging>
@@ -24,6 +25,11 @@
             <groupId>org.telegram</groupId>
             <artifactId>telegrambots</artifactId>
             <version>${telegrambots.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>${jaxb-api.version}</version>
         </dependency>
     </dependencies>
 
