--- a/data-scrapper/src/main/resources/application.yml
+++ b/data-scrapper/src/main/resources/application.yml
@@ -3,9 +3,6 @@ server:
   port: 8082
   shutdown: graceful
 
-logging.level:
-  org.springframework.orm.jpa.JpaTransactionManager: DEBUG
-
 spring:
   flyway:
     baseline-on-migrate: true
@@ -23,7 +20,7 @@ spring:
     open-in-view: false
     hibernate:
       ddl-auto: validate
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
