--- a/telegram-bot/src/main/resources/application.yml
+++ b/telegram-bot/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
     open-in-view: false
     hibernate:
       ddl-auto: update
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
