--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,7 +27,7 @@ jobs:
           distribution: 'corretto'
           cache: maven
       - name: Analyze with SonarCloud
-        run: mvn -B verify sonar:sonar
+        run: mvn -B verify sonar:sonar -Dsonar.projectKey=bali-events-bot -Dsonar.organization=simakovigor -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
