--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,9 @@
         <spotbugs-annotations.version>4.8.1</spotbugs-annotations.version>
         <plugins.checkstyle.puppycrawl.version>10.12.4</plugins.checkstyle.puppycrawl.version>
         <plugins.checkstyle.thomasjensen.version>7.0.1</plugins.checkstyle.thomasjensen.version>
+
+        <sonar.organization>simakovigor</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <dependencies>
