--- a/telegram-bot/pom.xml
+++ b/telegram-bot/pom.xml
@@ -17,6 +17,19 @@
         <telegrambots.version>6.9.7.0</telegrambots.version>
         <jaxb-api.version>2.3.1</jaxb-api.version>
     </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <packaging>jar</packaging>
 
