--- a/data-scrapper/pom.xml
+++ b/data-scrapper/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <groupId>com.bali.events</groupId>
-        <artifactId>bali-events</artifactId>
+        <artifactId>bali-events-bot</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
