--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -48,7 +48,7 @@ jobs:
 
   build:
     needs: sonar
-    name: Build and Package
+    name: Build & push Docker image
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -66,3 +66,22 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Build with Maven
         run: mvn -B package --file pom.xml
+
+      - name: Build & push Docker image for data-scrapper
+        uses: mr-smithers-excellent/docker-build-push@v5
+        with:
+          image: simakoff/data-scrapper
+          tags: latest
+          registry: docker.io
+          dockerfile: data-scrapper/Dockerfile
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build & push Docker image for telegram-bot
+        uses: mr-smithers-excellent/docker-build-push@v5
+        with:
+          image: simakoff/telegram-bot
+          tags: latest
+          registry: docker.io
+          dockerfile: telegram-bot/Dockerfile
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
