--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -65,23 +65,11 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
-
-      - name: Build & push Docker image for data-scrapper
-        uses: mr-smithers-excellent/docker-build-push@v5
+        run: mvn -B install --file pom.xml
+      - name: Publish to Docker Hub
+        uses: docker/build-push-action@v1
         with:
-          image: simakoff/data-scrapper
-          tags: latest
-          registry: docker.io
-          dockerfile: data-scrapper/Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build & push Docker image for telegram-bot
-        uses: mr-smithers-excellent/docker-build-push@v5
-        with:
-          image: simakoff/telegram-bot
-          tags: latest
-          registry: docker.io
-          dockerfile: telegram-bot/Dockerfile
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          tags: simakoff/data-scrapper:latest
+          file: data-scrapper/Dockerfile
