--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -47,7 +47,7 @@ jobs:
   #        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=SimakovIgor_bali-events-bot
 
   build:
-#    needs: sonar
+    #    needs: sonar
     name: Build & push Docker image
     runs-on: ubuntu-latest
     steps:
@@ -67,10 +67,9 @@ jobs:
       - name: Build with Maven
         run: mvn -B install --file pom.xml
       - name: Publish to Docker Hub
-        uses: docker/build-push-action@v1
+        uses: docker/build-push-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          dockerfile: data-scrapper/Dockerfile
-          repository: simakoff/data-scrapper
+          file: data-scrapper/Dockerfile
           tags: simakoff/data-scrapper:latest
