--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -66,10 +66,13 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Build with Maven
         run: mvn -B install --file pom.xml
-      - name: Publish to Docker Hub
-        uses: docker/build-push-action@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Publish to Docker Hub
+        uses: docker/build-push-action@v2
+        with:
           file: data-scrapper/Dockerfile
           tags: simakoff/data-scrapper:latest
