--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -64,15 +64,5 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      - name: Build with Maven
-        run: mvn -B install --file pom.xml
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Publish to Docker Hub
-        uses: docker/build-push-action@v2
-        with:
-          file: data-scrapper/Dockerfile
-          tags: simakoff/data-scrapper:latest
+      - name: Build with Maven And Push Docker Image
+        run: mvn -Djib.to.auth.username=${{ secrets.DOCKER_USERNAME }} -Djib.to.auth.password=${{ secrets.DOCKER_PASSWORD }} -Pbuild-docker-image clean package
