--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,39 +15,39 @@ on:
     branches: [ "master" ]
 
 jobs:
-  #  sonar:
-  #    name: SonarCloud analysis
-  #    runs-on: ubuntu-latest
-  #    steps:
-  #      - uses: actions/checkout@v4
-  #        with:
-  #          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-  #      - name: Set up JDK 21
-  #        uses: actions/setup-java@v4
-  #        with:
-  #          java-version: '21'
-  #          distribution: 'corretto'
-  #          cache: maven
-  #      - name: Cache SonarCloud packages
-  #        uses: actions/cache@v4
-  #        with:
-  #          path: ~/.sonar/cache
-  #          key: ${{ runner.os }}-sonar
-  #          restore-keys: ${{ runner.os }}-sonar
-  #      - name: Cache Maven packages
-  #        uses: actions/cache@v4
-  #        with:
-  #          path: ~/.m2
-  #          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-  #          restore-keys: ${{ runner.os }}-m2
-  #      - name: Analyze with SonarCloud
-  #        env:
-  #          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  #        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=SimakovIgor_bali-events-bot
+  sonar:
+    name: SonarCloud analysis
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'corretto'
+          cache: maven
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+      - name: Cache Maven packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      - name: Analyze with SonarCloud
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=SimakovIgor_bali-events-bot
 
   build:
-    #    needs: sonar
+    needs: sonar
     name: Build & push Docker image
     runs-on: ubuntu-latest
     steps:
@@ -64,15 +64,5 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      - name: Build with Maven
-        run: mvn -B install --file pom.xml
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Publish to Docker Hub
-        uses: docker/build-push-action@v2
-        with:
-          file: data-scrapper/Dockerfile
-          tags: simakoff/data-scrapper:latest
+      - name: Build with Maven And Push Docker Image
+        run: mvn -Djib.to.auth.username=${{ secrets.DOCKER_USERNAME }} -Djib.to.auth.password=${{ secrets.DOCKER_PASSWORD }} -Pbuild-docker-image clean package
