refactor and added prev and next buttons

--- a/telegram-bot/src/main/resources/application.yml
+++ b/telegram-bot/src/main/resources/application.yml
@@ -34,5 +34,5 @@ logging:
 com:
   balievent:
     bot:
-      token: 6781420399:AAHi0vGFUPnh-7wBzC7si7hw1XRQmrNmPzA
-      username: BaliEventsCoordinatebot
+      token: 6862871633:AAFQEI2mT7sjjiUjfSbgHHYZe7M9xPbjwlg
+      username: test_remove_me_sima_bot
