--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.5'
 # start DOCKER  C:\Java\account-service> docker-compose up -d
 
 services:
-  postgres:
+  db:
     container_name: postgres_container
     image: postgres
     command: [ "postgres", "-c", "log_statement=all" ]
@@ -28,10 +28,55 @@ services:
     volumes:
       - pgadmin:/var/lib/pgadmin
     ports:
-      - "80:80"
+      - "5050:80"
     networks:
       - postgres
+    depends_on:
+      - db
     restart: unless-stopped
+
+  #  selenium-chrome:
+  #    image: selenium/standalone-chrome
+  #    hostname: chrome
+  #    privileged: true
+  #    shm_size: 2gb
+  #    container_name: selenium-chrome
+  #    ports:
+  #      - "4444:4444"
+  #    networks:
+  #      - postgres
+
+  firefox:
+    image: selenium/standalone-firefox
+    hostname: firefox
+    privileged: true
+    shm_size: 2gb
+    container_name: selenium-firefox
+    ports:
+      - "4445:4444"
+      - "7900:7900"
+    networks:
+      - postgres
+
+#  data-scrapper:
+#    image: simakoff/data-scrapper:latest
+#    container_name: data-scrapper
+#    ports:
+#      - "8082:8082"
+#    depends_on:
+#      - selenium-chrome
+#    networks:
+#      - postgres
+
+#  telegram-bot:
+#    image: simakoff/telegram-bot:latest
+#    container_name: telegram-bot
+#    ports:
+#      - "8083:8083"
+#    networks:
+#      - postgres
+#    depends_on:
+#      - data-scrapper
 
 networks:
   postgres:
