--- a/telegram-bot/src/main/resources/application.yml
+++ b/telegram-bot/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 server:
   # start the program -> http://localhost:8080/swagger-ui/index.html
-  port: 8085
+  port: 8083
   shutdown: graceful
 
 logging.level:
@@ -12,7 +12,8 @@ spring:
   application:
     name: bali-events
   datasource:
-    url: jdbc:postgresql://localhost:5433/bali-events
+    url: jdbc:postgresql://localhost:5433/postgres
+    # url: jdbc:postgresql://db:5432/postgres
     username: postgres
     password: postgres
   jpa:
@@ -22,7 +23,6 @@ spring:
     show-sql: false
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: 'true'
 
 logging:
