--- a/telegram-bot/src/main/resources/application.yml
+++ b/telegram-bot/src/main/resources/application.yml
@@ -9,16 +9,16 @@ spring:
   main:
     banner-mode: off
   application:
-    name: bali-events
+    name: telegram-bot
   datasource:
-    url: jdbc:postgresql://localhost:5433/bali-events
+    url: jdbc:postgresql://localhost:5433/postgres
     username: postgres
     password: postgres
   jpa:
     open-in-view: false
     hibernate:
       ddl-auto: validate
-    show-sql: false
+    show-sql: true
     properties:
       hibernate:
         format_sql: 'true'
@@ -32,5 +32,5 @@ logging:
 com:
   balievent:
     bot:
-      token:
-      username:
+      token: 6862871633:AAFQEI2mT7sjjiUjfSbgHHYZe7M9xPbjwlg
+      username: test_remove_me_sima_bot
