Переделал концепцию навигации в чат боте из многих сообщений на одно user_data теперь хранится в базе данных

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,11 @@
             <version>${spotbugs-annotations.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.gavlyukovskiy</groupId>
+            <artifactId>datasource-proxy-spring-boot-starter</artifactId>
+            <version>1.9.1</version>
+        </dependency>
     </dependencies>
 
     <!--TODO maven-pmd-plugin, jacoco-maven-plugin-->
