--- a/telegram-bot/src/main/resources/application.yml
+++ b/telegram-bot/src/main/resources/application.yml
@@ -15,10 +15,22 @@ spring:
     open-in-view: false
     hibernate:
       ddl-auto: update
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
         format_sql: 'true'
+
+decorator:
+  datasource:
+    datasource-proxy:
+      query:
+        enable-logging: true
+        log-level: info
+      slow-query:
+        enable-logging: true
+        log-level: warn
+        threshold: 10
+      count-query: false
 
 logging:
   level:
@@ -29,5 +41,5 @@ logging:
 com:
   balievent:
     bot:
-      token:
-      username:
+      token: 6862871633:AAFQEI2mT7sjjiUjfSbgHHYZe7M9xPbjwlg
+      username: test_remove_me_sima_bot
