fix: env variables

--- a/telegram-bot/src/main/resources/application-docker.yml
+++ b/telegram-bot/src/main/resources/application-docker.yml
@@ -29,5 +29,5 @@ logging:
 com:
   balievent:
     bot:
-      token:
-      username:
+      token: ${TELEGRAM_TOKEN}
+      username: ${TELEGRAM_NAME}
