--- a/telegram-bot/src/main/resources/application-docker.yml
+++ b/telegram-bot/src/main/resources/application-docker.yml
@@ -8,9 +8,9 @@ spring:
   application:
     name: bali-events
   datasource:
-    url: jdbc:postgresql://db:5432/postgres
-    username: postgres
-    password: postgres
+    url: jdbc:postgresql://telegram-bot-postgres:5432/postgres
+    username: ${TELEGRAM_BOT_PG_NAME}
+    password: ${TELEGRAM_BOT_PG_PASSWORD}
   jpa:
     open-in-view: false
     hibernate:
