feat: Выбранные фильтры сейчас не работают #44

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-TELEGRAM_TOKEN: 6862871633:AAFQEI2mT7sjjiUjfSbgHHYZe7M9xPbjwlg
-TELEGRAM_NAME: test_remove_me_sima_bot
-TELEGRAM_BOT_PG_NAME: postgres
-TELEGRAM_BOT_PG_PASSWORD: postgres
-TELEGRAM_BOT_PGADMIN_DEFAULT_EMAIL: admin@mymail.ru
-TELEGRAM_BOT_PGADMIN_PASSWORD: adminpassword
+TELEGRAM_TOKEN:
+TELEGRAM_NAME:
+TELEGRAM_BOT_PG_NAME:
+TELEGRAM_BOT_PG_PASSWORD:
+TELEGRAM_BOT_PGADMIN_DEFAULT_EMAIL:
+TELEGRAM_BOT_PGADMIN_PASSWORD:
