--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -45,33 +45,22 @@ services:
     networks:
       - postgres
 
-  telegram-bot-data-scrapper:
-    image: simakoff/data-scrapper:latest
-    container_name: data-scrapper
-    environment:
-      - "SPRING_PROFILES_ACTIVE=docker"
-      - "TELEGRAM_BOT_PG_NAME=postgres"
-      - "TELEGRAM_BOT_PG_PASSWORD=postgres"
-    ports:
-      - "8082:8082"
-    depends_on:
-      - telegram-bot-firefox
-    networks:
-      - postgres
-
   telegram-bot-app:
-    image: simakoff/telegram-bot:latest
+    image: simakoff/bali-events-bot:latest
     container_name: telegram-bot
     environment:
       SPRING_PROFILES_ACTIVE: docker
       TELEGRAM_TOKEN: ${TELEGRAM_TOKEN}
       TELEGRAM_NAME: ${TELEGRAM_NAME}
+      TELEGRAM_BOT_PG_NAME: postgres
+      TELEGRAM_BOT_PG_PASSWORD: postgres
     ports:
       - "8083:8083"
     networks:
       - postgres
     depends_on:
       - telegram-bot-postgres
+      - telegram-bot-firefox
 
 networks:
   postgres:
