fix: fix app run errors

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
-    password: admin
+    password: postgres
   jpa:
     open-in-view: false
     hibernate:
@@ -45,5 +45,5 @@ logging:
 com:
   balievent:
     bot:
-      token: ${TELEGRAM_TOKEN}
-      username: ${TELEGRAM_NAME}
+      token: 6711002396:AAGKVf9gFAMbiJuW0vtjuu4FSbJr_F9r1hM
+      username: test_me_bali_sima_bot
